--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="style/style.css">
     <!-- <link rel="stylesheet" href="style/prod.css"> -->
     <link rel="stylesheet" href="style/techno.css">
+    <link rel="stylesheet" href="style/xs.css">
 </head>
 
 <body>
@@ -25,8 +26,8 @@
         <div class="top-header fixed-top" id="header">
             <div class="container">
                 <header class="d-flex flex-wrap justify-content-center my-4 pt-1">
-                    <a href="index.html" class="d-flex align-items-center me-md-auto link-body-emphasis text-decoration-none">
-                        <img src="images/logo.png" alt="">
+                    <a href="./index.html" class="logotype d-flex align-items-center me-auto link-body-emphasis text-decoration-none">
+                        <img src="./images/logo.png" alt="">
                     </a>
                     <button id="toggle-menu">
                         <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
@@ -34,8 +35,9 @@
                           </svg>
                     </button>
                     <ul class="nav nav-pills" id="primary-menu">
-                        <li class="nav-item active"><a href="index.html" class="nav-link">About</a></li>
-                        <li class="nav-item"><a href="./docs/technology.html" class="nav-link">Technology</a></li>
+                        <li class="nav-item active"><a href="./index.html" class="nav-link">About</a></li>
+                        <li class="nav-item"><a href="./docs/technology.html" class="nav-link">Technology</a>
+                        </li>
                         <li class="nav-item"><a href="./docs/products.html" class="nav-link">Products</a></li>
                     </ul>
                 </header>
@@ -470,6 +472,7 @@
     <script type="text/javascript" src="js/owl.carousel.min.js"></script>
     <script type="text/javascript" src="js/owl.mousewheel.min.js"></script>
     <script type="text/javascript" src="js/slick.min.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
 
     <script type="text/javascript">
         var owl = $('.owl-carousel');
