XS version, roadmap home page

--- a/index.html
+++ b/index.html
@@ -26,13 +26,16 @@
         <div class="top-header fixed-top" id="header">
             <div class="container">
                 <header class="d-flex flex-wrap justify-content-center my-4 pt-1">
-                    <a href="./index.html" class="logotype d-flex align-items-center me-auto link-body-emphasis text-decoration-none">
+                    <a href="./index.html"
+                        class="logotype d-flex align-items-center me-auto link-body-emphasis text-decoration-none">
                         <img src="./images/logo.png" alt="">
                     </a>
                     <button id="toggle-menu">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
-                            <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
-                          </svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor"
+                            class="bi bi-list" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd"
+                                d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z" />
+                        </svg>
                     </button>
                     <ul class="nav nav-pills" id="primary-menu">
                         <li class="nav-item active"><a href="./index.html" class="nav-link">About</a></li>
@@ -46,7 +49,7 @@
         <div class="primary-screen">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-6 primary-screen-start-block">
+                    <div class="col-lg-6 col-12 primary-screen-start-block">
                         <h1 class="title">MASTER<strong>AI revolution</strong></h1>
                         <p class="text" style="max-width: 500px;">Train and sell ai software making a stable and passive
                             income</p>
@@ -54,7 +57,7 @@
                             Join now
                         </button>
                     </div>
-                    <div class="col-lg-6 home-screen-end-block">
+                    <div class="col-lg-6 col-12 home-screen-end-block">
                         <img src="images/smartphone.svg" class="product-server" alt="">
                         <div class="coin-1"></div>
                         <div class="coin-2"></div>
@@ -65,9 +68,9 @@
             </div>
         </div>
         <!-- Card info -->
-        <div id="about-screen" style="margin-top: 200px;">
+        <div id="about-screen" style="margin-top: 450px;">
             <div class="container-md">
-                <div class="d-flex justify-content-between">
+                <div class="d-md-flex justify-content-between">
                     <div class="card-about">
                         <div class="in-card-about">
                             <div class="d-flex justify-content-between card-about-title">
@@ -168,14 +171,16 @@
         <div id="subscribe">
             <div class="container">
                 <div class="in-subscribe">
-                    <div class="subscribe-start col-lg-5">
-                        <div class="d-flex"> <span class="sale my-auto me-2">Earn up to</span> <span
-                                class="sale-badge"><strong>21%</strong>MONTHLY</span></div>
+                    <div class="subscribe-start col-lg-5 col-12">
+                        <div class="d-flex align-xs-center">
+                            <span class="sale my-auto me-2">Earn up to</span>
+                            <span class="sale-badge"><strong>21%</strong>MONTHLY</span>
+                        </div>
                         <h4 class="title">Subscribe <br>to AI Sowtware</h4>
                         <p class="text">Generate datasets and sell them in 1 click on our marketplace</p>
                         <button class="btn-order">Learn how</button>
                     </div>
-                    <div class="subscribe-end col-lg-7">
+                    <div class="subscribe-end col-lg-7 col-12">
                         <div class="arrow-lg"></div>
                         <div class="laptop"></div>
                     </div>
@@ -189,11 +194,11 @@
                 <div class="in-work">
                     <h4 class="title">How <strong>t3bute AI</strong> works</h4>
                     <div class="row work-box work-box-first">
-                        <div class="work-box-start work-first col-lg-6">
+                        <div class="work-box-start work-first col-lg-6 col-12">
                             <img src="./images/work-1.png" alt="">
                             <div class="work-bounce-sm"></div>
                         </div>
-                        <div class="work-box-end col-lg-6">
+                        <div class="work-box-end col-lg-6 col-12">
                             <div class="pre-text">Buy</div>
                             <h5 class="name">T3BUTE AI</h5>
                             <p class="text">T3BUTE AI learns from the marketand learns on each decision taken. Algorithm
@@ -201,19 +206,19 @@
                         </div>
                     </div>
                     <div class="row work-box work-box-second">
-                        <div class="work-box-end col-lg-6">
+                        <div class="work-box-end col-lg-6 col-12 order-2 order-sm-2 order-md-1">
                             <div class="pre-text">Upgrade</div>
                             <h5 class="name">Data set</h5>
                             <p class="text">You subscribe to T3BUTE learning software and became a sole owner of
                                 datasets that are generated with our AI models</p>
                         </div>
-                        <div class="work-box-start work-second col-lg-6">
+                        <div class="work-box-start work-second col-lg-6 col-12 order-1 order-sm-1 order-md-2">
                             <img src="./images/work-2.png" alt="">
                             <div class="work-bounce-sm"></div>
                         </div>
                     </div>
                     <div class="row work-box work-box-third">
-                        <div class="work-box-start work-third col-lg-6">
+                        <div class="work-box-start work-third col-lg-6 col-12">
                             <div class="work-card">
                                 <div class="card-image">
                                     <img class="card-img-top" src="./images/work-card.png" alt="Card image cap">
@@ -240,7 +245,7 @@
                             </div>
                             <div class="work-box-bounce"></div>
                         </div>
-                        <div class="work-box-end col-lg-6">
+                        <div class="work-box-end col-lg-6 col-12">
                             <div class="pre-text">Sell</div>
                             <h5 class="name">Sell your data and learn</h5>
                             <p class="text">We guarantee successful sale for your DataSets and pre-trained AI models
@@ -257,13 +262,13 @@
                 <div class="row">
                     <h3 class="card-section-title text-center">Invite to Earn even more</h3>
                     <div class="col-10 offset-1">
-                        <p class="card-section-description text-center mx-5">Increase Your <strong>Earnings at
+                        <p class="card-section-description text-center">Increase Your <strong>Earnings at
                                 T3BUTE</strong> AI and Earn
                             Exciting Rewards with our exclusive New Member Engagement Program</p>
                     </div>
                 </div>
                 <div class="row" style="margin-bottom: 150px;">
-                    <div class="card-invite card-invite-first col-lg-4">
+                    <div class="card-invite card-invite-first col-lg-4 col-12">
                         <div class="in-card-invite">
                             <div class="rank">Rank 1</div>
                             <div class="percent">18%</div>
@@ -271,7 +276,7 @@
                             <span class="lines">Lines</span> <span class="lines-level text-white fw-bold">1-5</span>
                         </div>
                     </div>
-                    <div class="card-invite card-invite-second col-lg-4">
+                    <div class="card-invite card-invite-second col-lg-4 col-12">
                         <div class="in-card-invite">
                             <div class="rank">Rank 2</div>
                             <div class="percent">30%</div>
@@ -280,7 +285,7 @@
                             <span class="lines">Lines</span> <span class="lines-level text-white fw-bold">1-5</span>
                         </div>
                     </div>
-                    <div class="card-invite card-invite-third col-lg-4">
+                    <div class="card-invite card-invite-third col-lg-4 col-12">
                         <div class="in-card-invite">
                             <div class="rank">Rank 3</div>
                             <div class="percent">35%</div>
@@ -295,7 +300,120 @@
         </div>
         <!-- /Card invite -->
         <!-- Card slider -->
-        <div class="card-section-slider">
+        <div id="roadmap-slider">
+            <div class="container">
+                <div class="in-roadmap">
+                    <div class="row">
+                        <div class="col-lg-4">
+                            <h3 class="card-section-title">Explore our Products Roadmap</h3>
+                            <p class="card-section-description">T3bute offers modern instruments to learn,
+                                play, earn, and simplify your life</p>
+                        </div>
+                        <div class="col-lg-7">
+                            <div class="tab-content" id="roadmap-tabs">
+                                <div class="tab-pane fade show active" id="pills-home" role="tabpanel"
+                                    aria-labelledby="pills-home-tab" tabindex="0">
+                                    <div class="row">
+                                        <div class="road-card col-lg-6">
+                                            <div class="in-road-card">
+                                                <img src="images/slider1.svg" alt="">
+                                                <div class="road-card-body">
+                                                    <div class="tag">AI</div>
+                                                    <div class="title">Content generation bot</div>
+                                                    <p class="text">Generate multiple type of visual and text content
+                                                        for your ideas or to promote T3Bute AI better</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="road-card col-lg-6">
+                                            <div class="in-road-card">
+                                                <img src="images/slider2.svg" alt="">
+                                                <div class="road-card-body">
+                                                    <div class="tag">Gaming</div>
+                                                    <div class="title">Auction</div>
+                                                    <p class="text">Create ideas just by writing down few sentences of
+                                                        what you are looking for with our astonishing concept generator
+                                                        AI</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="road-card mt-4 col-lg-6">
+                                            <div class="in-road-card">
+                                                <img src="images/slider3.svg" alt="">
+                                                <div class="road-card-body">
+                                                    <div class="tag">Trading</div>
+                                                    <div class="title">Stock trading bot</div>
+                                                    <p class="text">Purchase our software and install it on a dedicated
+                                                        server in order to take advantage of stock prices </p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="road-card mt-4 col-lg-6">
+                                            <div class="in-road-card">
+                                                <img src="images/slider4.svg" alt="">
+                                                <div class="road-card-body">
+                                                    <div class="tag">Eucation</div>
+                                                    <div class="title">NFT Academy</div>
+                                                    <p class="text">Generate multiple type of visual and text content
+                                                        for your ideas or to promote T3Bute AI better</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+
+
+                                </div>
+                                <div class="tab-pane fade" id="pills-profile" role="tabpanel"
+                                    aria-labelledby="pills-profile-tab" tabindex="0"></div>
+                                <div class="tab-pane fade" id="pills-contact" role="tabpanel"
+                                    aria-labelledby="pills-contact-tab" tabindex="0"></div>
+                                <div class="tab-pane fade" id="pills-disabled" role="tabpanel"
+                                    aria-labelledby="pills-disabled-tab" tabindex="0"></div>
+                            </div>
+                        </div>
+                        <div class="col-lg-1">
+                            <ul class="nav-tabs-map nav nav-pills mb-3" id="pills-tab" role="tablist">
+                                <li class="nav-item" role="presentation">
+                                    <button class="nav-link active" id="pills-home-tab" data-bs-toggle="pill"
+                                        data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home"
+                                        aria-selected="true"><span>Step 1</span></button>
+                                </li>
+                                <li class="nav-item" role="presentation">
+                                    <button class="nav-link" id="pills-profile-tab" data-bs-toggle="pill"
+                                        data-bs-target="#pills-profile" type="button" role="tab"
+                                        aria-controls="pills-profile" aria-selected="false"><span>Step 2</span></button>
+                                </li>
+                                <li class="nav-item" role="presentation">
+                                    <button class="nav-link" id="pills-contact-tab" data-bs-toggle="pill"
+                                        data-bs-target="#pills-contact" type="button" role="tab"
+                                        aria-controls="pills-contact" aria-selected="false"><span>Step 3</span></button>
+                                </li>
+                                <li class="nav-item" role="presentation">
+                                    <button class="nav-link" id="pills-disabled-tab" data-bs-toggle="pill"
+                                        data-bs-target="#pills-disabled" type="button" role="tab"
+                                        aria-controls="pills-disabled" aria-selected="false"><span>Step
+                                            4</span></button>
+                                </li>
+                                <li>
+                                    <a class="nav-link btn-tabs btn-next-tab">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
+                                            fill="currentColor" class="bi bi-arrow-down" viewBox="0 0 16 16">
+                                            <path fill-rule="evenodd"
+                                                d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z" />
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+        <!-- <div class="card-section-slider">
             <div class="container">
                 <div class="row">
                     <h3 class="card-section-title text-center">Explore our Products Roadmap</h3>
@@ -437,16 +555,13 @@
                         </div>
                     </div>
                 </div>
-
-
-
             </div>
-        </div>
+        </div> -->
         <!-- /Card slider -->
 
         <footer id="footer">
             <div class="container">
-                <div class="d-flex flex-wrap justify-content-center" style="padding-top: 85px; padding-bottom: 85px;">
+                <div class="d-flex flex-wrap justify-content-center" style="padding-top: 30px; padding-bottom: 30px;">
                     <a href="index.html"
                         class="d-flex align-items-center me-md-auto link-body-emphasis text-decoration-none">
                         <img src="./images/logo.png" alt="">
@@ -475,6 +590,19 @@
     <script type="text/javascript" src="js/main.js"></script>
 
     <script type="text/javascript">
+
+
+
+        $('.btn-next-tab').click(function () {
+            const nextTabLinkEl = $('.nav-tabs-map .active').closest('li').next('li').find('button')[0];
+
+            if (!$(nextTabLinkEl).is(':last-child')) {
+                alert('показать стрелку вверх');
+            }
+            const nextTab = new bootstrap.Tab(nextTabLinkEl);
+            nextTab.show();
+        });
+
         var owl = $('.owl-carousel');
         owl.owlCarousel({
             loop: false,
