--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                     </div>
                 </div>
                 <div class="row" style="margin-bottom: 150px;">
-                    <div class="card-invite card-invite-first col-lg-4 col-sm-12 col-md-6 col-12">
+                    <div class="card-invite card-invite-first col-md-6 col-lg-4 col-sm-12 col-12">
                         <div class="in-card-invite">
                             <div class="rank">Rank 1</div>
                             <div class="percent">18%</div>
@@ -233,7 +233,7 @@
                             <span class="lines">Lines</span> <span class="lines-level text-white fw-bold">1-5</span>
                         </div>
                     </div>
-                    <div class="card-invite card-invite-second col-lg-4 col-sm-12 col-md-6 col-12">
+                    <div class="card-invite card-invite-second col-md-6 col-lg-4 col-sm-12 col-12">
                         <div class="in-card-invite">
                             <div class="rank">Rank 2</div>
                             <div class="percent">30%</div>
@@ -242,7 +242,7 @@
                             <span class="lines">Lines</span> <span class="lines-level text-white fw-bold">1-5</span>
                         </div>
                     </div>
-                    <div class="card-invite card-invite-third col-lg-4 col-sm-12 col-md-6 offset-md-3 col-12">
+                    <div class="card-invite card-invite-third col-lg-4 offset-lg-0 col-sm-12 col-md-6 offset-md-3 col-12">
                         <div class="in-card-invite">
                             <div class="rank">Rank 3</div>
                             <div class="percent">35%</div>
