--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                         <div class="work-box-start work-third col-lg-6 col-md-6 col-sm-12 col-12">
                             <div class="work-card">
                                 <div class="card-image">
-                                    <img class="card-img-top" src="./images/work-card.png" alt="Card image cap">
+                                    <img class="work-card-img" src="./images/work-card.png" alt="Card image cap">
                                 </div>
                                 <div class="card-body">
                                     <div class="card-badge">RARE COLLECTION</div>
@@ -190,7 +190,7 @@
                             </div>
                             <div class="work-card work-card-copy">
                                 <div class="card-image">
-                                    <img class="card-img-top" src="./images/work-card.png" alt="Card image cap">
+                                    <img class="work-card-img" src="./images/work-card.png" alt="Card image cap">
                                 </div>
                                 <div class="card-body">
                                     <div class="card-badge">RARE COLLECTION</div>
