--- a/index.html
+++ b/index.html
@@ -1,27 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <title>HOME PAGE</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
-    <!-- <link rel="stylesheet" href="style/owl.carousel.min.css">
-    <link rel="stylesheet" href="style/owl.theme.green.min.css"> -->
-    <link rel="stylesheet" href="style/style.css">
-    <!-- <link rel="stylesheet" href="style/prod.css"> -->
-    <!-- <link rel="stylesheet" href="style/techno.css"> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="style/xs.css">
     <link rel="stylesheet" href="style/sm.css">
     <link rel="stylesheet" href="style/md.css">
+    <link rel="stylesheet" href="style/lg.css">
+    <link rel="stylesheet" href="style/xl.css"> -->
+    <link rel="stylesheet" href="style/style.min.css">
 </head>
-
 <body>
     <!-- #wrapper-content -->
     <div id="wrapper-content">
@@ -51,7 +48,7 @@
         <div class="primary-screen">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-6 col-md-6 col-sm-12 col-12 primary-screen-start-block">
+                    <div class="col-xxl-6 col-lg-6 col-md-6 col-sm-12 col-12 primary-screen-start-block">
                         <h1 class="title">MASTER<strong>AI revolution</strong></h1>
                         <p class="text" style="max-width: 500px;">Train and sell ai software making a stable and passive
                             income</p>
@@ -59,7 +56,7 @@
                             Join now
                         </button>
                     </div>
-                    <div class="col-lg-6 col-md-6 col-sm-12 col-12 home-screen-end-block">
+                    <div class="col-xxl-6 col-lg-6 col-md-6 col-sm-12 col-12 home-screen-end-block">
                         <!-- <img src="images/Frame 1321314942.png" class="product-server" alt=""> -->
                         <!-- <img src="images/Group 1321314953.png" class="product-server" alt=""> -->
                         <img src="images/smartphone.svg" class="product-server" alt="">
@@ -127,8 +124,8 @@
         <!-- Subscribe -->
         <div id="subscribe">
             <div class="container">
-                <div class="in-subscribe">
-                    <div class="subscribe-start col-lg-5 col-md-12 col-sm-12 col-12">
+                <div class="row in-subscribe">
+                    <div class="subscribe-start col-xxl-5 col-lg-5 col-md-12 col-sm-12 col-12">
                         <div class="d-flex align-xs-center">
                             <span class="sale my-auto me-2">Earn up to</span>
                             <span class="sale-badge"><strong>21%</strong>MONTHLY</span>
@@ -137,7 +134,7 @@
                         <p class="text">Generate datasets and sell them in 1 click on our marketplace</p>
                         <button class="btn-order">Learn how</button>
                     </div>
-                    <div class="subscribe-end col-lg-7 col-md-12 col-sm-12 col-12">
+                    <div class="subscribe-end col-xxl-7 col-lg-7 col-md-12 col-sm-12 col-12">
                         <div class="arrow-lg"></div>
                         <div class="laptop"></div>
                     </div>
@@ -151,11 +148,11 @@
                 <div class="in-work">
                     <h4 class="title">How <strong>t3bute AI</strong> works</h4>
                     <div class="row work-box work-box-first">
-                        <div class="work-box-start work-first col-lg-6 col-md-6 col-sm-12 col-12">
+                        <div class="work-box-start work-first col-xxl-6 offset-xxl-0 col-xl-5 offset-xl-1 col-lg-6 col-md-6 col-sm-12 col-12">
                             <img src="./images/work-1.png" alt="">
                             <div class="work-bounce-sm"></div>
                         </div>
-                        <div class="work-box-end col-lg-6 col-md-6 col-12">
+                        <div class="work-box-end col-xxl-6 col-xl-5 col-lg-6 col-md-6 col-12">
                             <div class="pre-text">Buy</div>
                             <h5 class="name">T3BUTE AI</h5>
                             <p class="text">T3BUTE AI learns from the marketand learns on each decision taken. Algorithm
@@ -163,19 +160,19 @@
                         </div>
                     </div>
                     <div class="row work-box work-box-second">
-                        <div class="work-box-end col-lg-6 col-md-6 col-sm-12 col-12 order-2 order-sm-2 order-md-1">
+                        <div class="work-box-end col-xxl-6 offset-xxl-0 col-xl-5 offset-xl-1 col-lg-6 col-md-6 col-sm-12 col-12 order-2 order-sm-2 order-md-1">
                             <div class="pre-text">Upgrade</div>
                             <h5 class="name">Data set</h5>
                             <p class="text">You subscribe to T3BUTE learning software and became a sole owner of
                                 datasets that are generated with our AI models</p>
                         </div>
-                        <div class="work-box-start work-second col-lg-6 col-md-6 col-sm-12 col-12 order-1 order-sm-1 order-md-2">
+                        <div class="work-box-start work-second col-xxl-6 col-xl-5 col-lg-6 col-md-6 col-sm-12 col-12 order-1 order-sm-1 order-md-2">
                             <img src="./images/work-2.png" alt="">
                             <div class="work-bounce-sm"></div>
                         </div>
                     </div>
                     <div class="row work-box work-box-third">
-                        <div class="work-box-start work-third col-lg-6 col-md-6 col-sm-12 col-12">
+                        <div class="work-box-start work-third col-xxl-6 offset-xxl-0 col-xl-5 offset-xl-1 col-lg-6 col-md-6 col-sm-12 col-12">
                             <div class="work-card">
                                 <div class="card-image">
                                     <img class="work-card-img" src="./images/work-card.png" alt="Card image cap">
@@ -202,7 +199,7 @@
                             </div>
                             <div class="work-box-bounce"></div>
                         </div>
-                        <div class="work-box-end col-lg-6 col-md-6 col-12">
+                        <div class="work-box-end col-xxl-6 col-xl-5 col-lg-6 col-md-6 col-12">
                             <div class="pre-text">Sell</div>
                             <h5 class="name">Sell your data and learn</h5>
                             <p class="text">We guarantee successful sale for your DataSets and pre-trained AI models
@@ -225,7 +222,7 @@
                     </div>
                 </div>
                 <div class="row" style="margin-bottom: 150px;">
-                    <div class="card-invite card-invite-first col-md-6 col-lg-4 col-sm-12 col-12">
+                    <div class="card-invite card-invite-first col-xxl-4 col-xl-4 col-md-6 col-lg-4 col-sm-12 col-12">
                         <div class="in-card-invite">
                             <div class="rank">Rank 1</div>
                             <div class="percent">18%</div>
@@ -233,7 +230,7 @@
                             <span class="lines">Lines</span> <span class="lines-level text-white fw-bold">1-5</span>
                         </div>
                     </div>
-                    <div class="card-invite card-invite-second col-md-6 col-lg-4 col-sm-12 col-12">
+                    <div class="card-invite card-invite-second col-xxl-4 col-xl-4 col-md-6 col-lg-4 col-sm-12 col-12">
                         <div class="in-card-invite">
                             <div class="rank">Rank 2</div>
                             <div class="percent">30%</div>
@@ -242,7 +239,7 @@
                             <span class="lines">Lines</span> <span class="lines-level text-white fw-bold">1-5</span>
                         </div>
                     </div>
-                    <div class="card-invite card-invite-third col-lg-4 offset-lg-0 col-sm-12 col-md-6 offset-md-3 col-12">
+                    <div class="card-invite card-invite-third col-xxl-4 col-xl-4 col-lg-4 offset-lg-0 col-sm-12 col-md-6 offset-md-3 col-12">
                         <div class="in-card-invite">
                             <div class="rank">Rank 3</div>
                             <div class="percent">35%</div>
@@ -261,12 +258,12 @@
             <div class="container">
                 <div class="in-roadmap">
                     <div class="row">
-                        <div class="col-lg-4 col-md-12 col-sm-12 col-12">
+                        <div class="col-xxl-4 col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
                             <h3 class="card-section-title">Explore our Products Roadmap</h3>
                             <p class="card-section-description">T3bute offers modern instruments to learn,
                                 play, earn, and simplify your life</p>
                         </div>
-                        <div class="col-lg-7 col-md-12 col-sm-12 col-12">
+                        <div class="col-xxl-7 col-xl-10 col-lg-10 col-md-12 col-sm-12 col-12">
                             <div class="tab-content" id="roadmap-tabs">
                                 <div class="tab-pane fade show active" id="pills-step-1" role="tabpanel"
                                     aria-labelledby="pills-step-1-tab" tabindex="0">
@@ -452,7 +449,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-1 col-md-12 col-sm-12 col-12">
+                        <div class="col-xxl-1 col-xl-2 col-lg-2 col-md-12 col-sm-12 col-12">
                             <ul class="nav-tabs-map nav nav-pills mb-3" id="pills-tab" role="tablist">
                                 <li class="nav-item" role="presentation">
                                     <button class="nav-link active" id="pills-step-1-tab" data-bs-toggle="pill"
