--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
         rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <!-- <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="style/xs.css">
     <link rel="stylesheet" href="style/sm.css">
     <link rel="stylesheet" href="style/md.css">
     <link rel="stylesheet" href="style/lg.css">
-    <link rel="stylesheet" href="style/xl.css"> -->
-    <link rel="stylesheet" href="style/style.min.css">
+    <link rel="stylesheet" href="style/xl.css">
+    <!-- <link rel="stylesheet" href="style/style.min.css"> -->
 </head>
 <body>
     <!-- #wrapper-content -->
@@ -59,7 +59,8 @@
                     <div class="col-xxl-6 col-lg-6 col-md-6 col-sm-12 col-12 home-screen-end-block">
                         <!-- <img src="images/Frame 1321314942.png" class="product-server" alt=""> -->
                         <!-- <img src="images/Group 1321314953.png" class="product-server" alt=""> -->
-                        <img src="images/smartphone.svg" class="product-server" alt="">
+                        <!-- <img src="images/smartphone.svg" class="product-server" alt=""> -->
+                        <img src="images/smartphone.png" class="product-server" alt="">
                         <div class="coin-1"></div>
                         <div class="coin-2"></div>
                         <div class="coin-3"></div>
