--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <!-- <img src="images/Frame 1321314942.png" class="product-server" alt=""> -->
                         <!-- <img src="images/Group 1321314953.png" class="product-server" alt=""> -->
                         <!-- <img src="images/smartphone.svg" class="product-server" alt=""> -->
-                        <img src="images/smartphone.png" class="product-server" alt="">
+                        <img src="images/smartphone4.png" class="product-server" alt="">
                         <div class="coin-1"></div>
                         <div class="coin-2"></div>
                         <div class="coin-3"></div>
@@ -150,7 +150,7 @@
                     <h4 class="title">How <strong>t3bute AI</strong> works</h4>
                     <div class="row work-box work-box-first">
                         <div class="work-box-start work-first col-xxl-6 offset-xxl-0 col-xl-5 offset-xl-1 col-lg-6 col-md-6 col-sm-12 col-12">
-                            <img src="./images/work-1.png" alt="">
+                            <img src="./images/work-11.png" alt="">
                             <div class="work-bounce-sm"></div>
                         </div>
                         <div class="work-box-end col-xxl-6 col-xl-5 col-lg-6 col-md-6 col-12">
