fixed home  image

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <header class="d-flex flex-wrap justify-content-center my-4 pt-1">
                     <a href="./index.html"
                         class="logotype d-flex align-items-center me-auto link-body-emphasis text-decoration-none">
-                        <img src="./images/logo.png" alt="">
+                        <img src="./images/logo.svg" alt="">
                     </a>
                     <button id="toggle-menu">
                         <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor"
@@ -60,7 +60,7 @@
                         <!-- <img src="images/Frame 1321314942.png" class="product-server" alt=""> -->
                         <!-- <img src="images/Group 1321314953.png" class="product-server" alt=""> -->
                         <!-- <img src="images/smartphone.svg" class="product-server" alt=""> -->
-                        <img src="images/smartphone4.png" class="product-server" alt="">
+                        <img src="images/smart.png" class="product-server" alt="">
                         <div class="coin-1"></div>
                         <div class="coin-2"></div>
                         <div class="coin-3"></div>
